CKA/Extras/Service & Networking/apache-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: apache-nginx
spec:
  rules:
  - host: '*'
    http:
      paths:
      - backend:
          service:
            name: apache-service
            port:
              number: 8080
        path: /apache
        pathType: Exact
      - backend:
          service:
            name: nginx-service
            port:
              number: 80
        path: /nginx
        pathType: Exact
status:
  loadBalancer: {}
